added changes for dockerize

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -9,8 +9,8 @@
 		"prepublish": "npm run build:clean",
 		"build:clean": "rimraf dist",
 		"start": "node app.js",
-		"docker:build": "docker build . -t xterm-stack-frontend:0.0.2",
-		"docker:run": "docker run -it xterm-stack-frontend:0.0.2",
+		"docker:build": "docker build . -t sample-stack-frontend:0.0.1",
+		"docker:run": "docker run -it sample-stack-frontend:0.0.1",
 		"jest": "./node_modules/.bin/jest",
 		"test": "jest",
 		"test:debug": "npm test -- --runInBand",
