--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -29,15 +29,15 @@
 	"devDependencies": {
 		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
-		"webpack": "^3.5.6",
+		"webpack": "^3.7.1",
 		"webpack-dev-server": "^2.8.2",
 		"webpack-fail-plugin": "^2.0.0",
 		"webpack-visualizer-plugin": "^0.1.11"
 	},
 	"dependencies": {
-		"@sample/client-core": "*",
-		"@sample/client-react": "*",
-		"@sample/client-redux": "*",
+		"@sample-stack/client-core": "*",
+		"@sample-stack/client-react": "*",
+		"@sample-stack/client-redux": "*",
 		"express": "^4.16.2"		
 	},
 	"peerDependencies": {
