--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -43,7 +43,9 @@
 	"dependencies": {
 		"@sample-stack/schema": "*",
 		"@sample-stack/server-core": "*",
+		"@sample-stack/core": "*",
 		"@sample-stack/store": "*",
+		"@sample-stack/graphql": "*",
 		"@cdm-logger/server": "^3.0.2",
 		"apollo-logger": "^0.1.0",
 		"reflect-metadata": "^0.1.10",
