--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/react": "^16.0.5",
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^15.5.0",
+    "@types/react-helmet": "^5.0.3",
     "@types/react-redux": "^5.0.8",
     "@types/recompose": "^0.24.1",
     "@types/semver": "^5.3.31",
@@ -115,6 +116,7 @@
     "node-dev": "^3.1.3",
     "nodemon": "^1.12.1",
     "npm-check-updates": "^2.12.1",
+    "persistgraphql-webpack-plugin": "^0.4.2",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
     "react-redux-typescript": "^2.3.0",
@@ -153,10 +155,12 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@cdm-logger/client": "^3.1.0",
     "@cdm-logger/server": "^3.0.2",
     "apollo-client": "^1.9.2",
     "apollo-link": "^0.7.0",
     "apollo-logger": "^0.1.0",
+    "browser-bunyan": "^0.4.0",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
     "cors": "^2.8.3",
@@ -192,11 +196,14 @@
     "nats-hemera": "^1.5.13",
     "nconf": "^0.8.4",
     "node-pre-gyp": "~0.6.31",
+    "persistgraphql": "^0.3.10",
     "prop-types": "^15.5.8",
+    "ramda": "^0.25.0",
     "react": "^15.5.4",
     "react-apollo": "^1.4.15",
     "react-dom": "^15.5.4",
     "react-fela": "^5.3.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
@@ -212,6 +219,7 @@
     "reselect": "^3.0.0",
     "rxjs": "^5.4.3",
     "sequelize": "^4.8.4",
+    "serialize-javascript": "^1.4.0",
     "sqlite3": "^3.1.8",
     "styled-components": "^2.0.0",
     "subscriptions-transport-ws": "^0.8.3"
