--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample/client-redux",
+  "name": "@sample-stack/client-redux",
   "version": "0.0.1",
   "description": "GraphQL for sample",
   "main": "lib/index.js",
@@ -50,10 +50,9 @@
     "webpack": "^3.7.1"   
   },
   "dependencies": {
-    "@sample/client-core": "*"
+    "@sample-stack/client-core": "*"
   },
   "peerDependencies": {
-    "@sample/client-core": "*",
     "apollo-client": ">=1.2.2",
     "graphql": ">=0.9.0",
     "redux": ">=3.6.0"
