--- a/packages/sample-store/package.json
+++ b/packages/sample-store/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample/store",
+  "name": "@sample-stack/store",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
