--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -1,4 +1,3 @@
-
 {
 	"name": "frontend-server",
 	"version": "0.0.1",
@@ -35,10 +34,12 @@
 		"webpack-visualizer-plugin": "^0.1.11"
 	},
 	"dependencies": {
+		"@sample-stack/core": "*",
 		"@sample-stack/client-core": "*",
 		"@sample-stack/client-react": "*",
 		"@sample-stack/client-redux": "*",
-		"express": "^4.16.2"		
+		"@sample-stack/graphql": "*",
+		"express": "^4.16.2"
 	},
 	"peerDependencies": {
 		"source-map-loader": "*",
