--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.8.2",
     "webpack-fail-plugin": "^2.0.0",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-manifest-plugin": "^1.1.0",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
