--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "install": "npm run lerna",
     "clean": "lerna clean",
     "start": "babel-node --presets es2015 tools/webpack.run watch",
+    "spinBuild": "cross-env NODE_ENV=production spin build",
+    "spinWatch": "spin watch",
+    "spinExp": "spin exp",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "build": "npm run build:packages",
@@ -81,17 +84,25 @@
     "apollo-codegen": "^0.16.5",
     "apollo-test-utils": "^0.3.2",
     "awesome-typescript-loader": "^3.2.3",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^8.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "body-parser": "^1.18.1",
+    "babel-plugin-styled-components": "^1.2.1",
+    "babel-plugin-tcomb": "^0.3.26",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.9",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-native": "^4.0.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
     "concurrently": "^3.4.0",
+    "caporal": "^0.7.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.0",
@@ -127,32 +138,60 @@
     "redux-mock-store": "^1.2.3",
     "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
+    "connect": "^3.6.5",
+    "enzyme-adapter-react-16": "^1.0.1",
+    "haul": "1.0.0-beta.6",
+    "http-proxy-middleware": "^0.17.4",
+    "husky": "^0.14.3",
+    "jsdom": "^11.3.0",
+    "lint-staged": "^4.2.3",
+    "mime": "^1.4.1",
+    "mocha": "^4.0.1",
+    "mocha-steps": "^1.1.0",
+    "mocha-webpack": "^0.7.0",
+    "node-sass": "^4.5.3",
+    "ignore-loader": "^0.1.2",
+    "image-size": "^0.6.1",
+    "ip": "^1.1.5",
+    "isomorphic-style-loader": "^4.0.0",
+    "flow-bin": "^0.52.0",
+    "freeport-async": "^1.1.1",
+    "fs-extra": "^4.0.2",
     "sinon": "^3.2.1",
     "sinon-as-promised": "^4.0.3",
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
+    "spinjs": "^0.4.7",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "ts-jest": "^21.1.2",
     "ts-loader": "^2.2.1",
     "ts-node": "^3.1.0",
+    "shelljs": "^0.7.8",
+    "postcss-loader": "^2.0.6",
+    "prettier": "^1.7.4",
+    "qrcode-terminal": "^0.11.0",
+    "resolve-url-loader": "^2.1.1",
+    "sass-loader": "^6.0.6",
+    "tcomb": "^3.2.24",
+    "url-loader": "^0.6.2",
+    "wait-on": "^2.0.2",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
     "typescript": "2.5.2",
     "typescript-require": "^0.2.9-1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "wait-on": "^2.0.2",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.8.2",
+    "webpack-dev-server": "^2.9.1",
     "webpack-fail-plugin": "^2.0.0",
     "webpack-hot-middleware": "^2.20.0",
-    "webpack-manifest-plugin": "^1.1.0",
+    "webpack-manifest-plugin": "^1.3.2",
     "webpack-merge": "^4.1.0",
     "webpack-node-externals": "^1.6.0",
     "webpack-sources": "^1.0.1",
-    "webpack-virtual-modules": "^0.1.5",
+    "webpack-virtual-modules": "^0.1.8",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
