updated spin package to fix few issues

--- a/.spinrc.json
+++ b/.spinrc.json
@@ -33,9 +33,9 @@
         "frontendBuildDir": "servers/frontend-server/dist",
         "dllBuildDir": "build/dll",
         "overridesConfig": "tools/webpackAppConfig.js",
-        "stack": ["apollo", "typescript", "react", "sass", "es6", "webpack"],
+        "stack": ["apollo", "ts", "react", "sass","webpack"],
         "backendUrl": "http://localhost:8080/graphql",
-        "ssr": true,
+        "ssr": false,
         "webpackDll": true,
         "reactHotLoader": false,
         "persistGraphQL": false,
