--- a/package.json
+++ b/package.json
@@ -101,33 +101,56 @@
     "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "concurrently": "^3.4.0",
     "caporal": "^0.7.0",
+    "concurrently": "^3.4.0",
+    "connect": "^3.6.5",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.0",
     "dotenv": "^4.0.0",
     "enzyme": "^2.8.2",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.6.1",
     "eslint-plugin-graphql": "^1.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
+    "flow-bin": "^0.52.0",
+    "freeport-async": "^1.1.1",
+    "fs-extra": "^4.0.2",
     "graphql-code-generator": "^0.8.10",
+    "haul": "1.0.0-beta.6",
     "hemera-testsuite": "^1.4.1",
     "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.17.4",
+    "husky": "^0.14.3",
+    "ignore-loader": "^0.1.2",
+    "image-size": "^0.6.1",
+    "ip": "^1.1.5",
+    "isomorphic-style-loader": "^4.0.0",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^21.1.0",
     "jest-cli": "^21.1.0",
+    "jsdom": "^11.3.0",
     "json-loader": "^0.5.4",
     "lerna": "2.1.2",
+    "lint-staged": "^4.2.3",
     "lodash": "^4.17.4",
+    "mime": "^1.4.1",
     "minilog": "^3.1.0",
     "mkdirp": "^0.5.1",
+    "mocha": "^4.0.1",
+    "mocha-steps": "^1.1.0",
+    "mocha-webpack": "^0.7.0",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
     "npm-check-updates": "^2.12.1",
+    "openurl": "^1.1.1",
     "persistgraphql-webpack-plugin": "^0.4.2",
+    "postcss-loader": "^2.0.6",
+    "prettier": "^1.7.4",
+    "qrcode-terminal": "^0.11.0",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.5.1",
     "react-redux-typescript": "^2.3.0",
@@ -137,51 +160,29 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-mock-store": "^1.2.3",
     "remap-istanbul": "^0.9.5",
+    "resolve-url-loader": "^2.1.1",
     "rimraf": "^2.6.1",
-    "connect": "^3.6.5",
-    "enzyme-adapter-react-16": "^1.0.1",
-    "haul": "1.0.0-beta.6",
-    "http-proxy-middleware": "^0.17.4",
-    "husky": "^0.14.3",
-    "jsdom": "^11.3.0",
-    "lint-staged": "^4.2.3",
-    "mime": "^1.4.1",
-    "mocha": "^4.0.1",
-    "mocha-steps": "^1.1.0",
-    "mocha-webpack": "^0.7.0",
-    "node-sass": "^4.5.3",
-    "ignore-loader": "^0.1.2",
-    "image-size": "^0.6.1",
-    "ip": "^1.1.5",
-    "isomorphic-style-loader": "^4.0.0",
-    "flow-bin": "^0.52.0",
-    "freeport-async": "^1.1.1",
-    "fs-extra": "^4.0.2",
+    "sass-loader": "^6.0.6",
+    "shelljs": "^0.7.8",
     "sinon": "^3.2.1",
     "sinon-as-promised": "^4.0.3",
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
-    "spinjs": "^0.4.7",
+    "spinjs": "^0.4.8",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
+    "tcomb": "^3.2.24",
     "ts-jest": "^21.1.2",
     "ts-loader": "^2.2.1",
     "ts-node": "^3.1.0",
-    "shelljs": "^0.7.8",
-    "postcss-loader": "^2.0.6",
-    "prettier": "^1.7.4",
-    "qrcode-terminal": "^0.11.0",
-    "resolve-url-loader": "^2.1.1",
-    "sass-loader": "^6.0.6",
-    "tcomb": "^3.2.24",
-    "url-loader": "^0.6.2",
-    "wait-on": "^2.0.2",
     "tslint": "^5.4.3",
     "tslint-loader": "^3.5.3",
     "tslint-react": "^3.0.0",
     "typescript": "2.5.2",
     "typescript-require": "^0.2.9-1",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
+    "url-loader": "^0.6.2",
+    "wait-on": "^2.0.2",
     "webpack": "^3.7.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
