fixes `tsx` issues and backend runs fine`

--- a/package.json
+++ b/package.json
@@ -168,7 +168,7 @@
     "sinon-as-promised": "^4.0.3",
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
-    "spinjs": "^0.4.8",
+    "spinjs": "^0.4.9",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.24",
@@ -201,6 +201,7 @@
     "apollo-client": "^1.9.2",
     "apollo-link": "^0.7.0",
     "apollo-logger": "^0.1.0",
+    "body-parser": "^1.18.2",
     "browser-bunyan": "^0.4.0",
     "bunyan": "^1.8.10",
     "classnames": "^2.2.5",
