--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
+build
 build/Release
 
 # Dependency directory
