--- a/app.json
+++ b/app.json
@@ -4,8 +4,10 @@
     "frontendBuildDir": "servers/frontend-server/dist",
     "graphQLUrl": "http://localhost:8080/graphql",
     "webpackDevPort": 3000,
+    "clientPort": 3010,
     "apiPort": 8080,
     "ssr": false,
+    "dllBuildDir": "build/dll",    
     "webpackDll": true,
     "frontendRefreshOnBackendChange": true,
     "reactHotLoader": false,
