--- a/.spinrc.json
+++ b/.spinrc.json
@@ -1,44 +1,69 @@
 {
     "builders": {
-      "server": {
-        "stack": ["server"],
-        "tsLoaderOptions": {
-            "configFileName": "./servers/backend-server/tsconfig.json"
+        "backendServer": {
+            "stack": [
+                "server"
+            ],
+            "tsLoaderOptions": {
+                "configFileName": "./servers/backend-server/tsconfig.json"
+            },
+            "enabled": false
         },
-        "enabled": true
-      },
-      "web": {
-        "stack": "web",
-        "tsLoaderOptions": {
-            "configFileName": "./servers/frontend-server/tsconfig.json"
+        "web": {
+            "stack": "web",
+            "tsLoaderOptions": {
+                "configFileName": "./servers/frontend-server/tsconfig.json"
+            },
+            "openBrowser": true,
+            "enabled": true
         },
-        "openBrowser": true,
-        "enabled": true
-      },
-      "android": {
-        "stack": ["react-native", "android"],
-        "enabled": false
-      },
-      "ios": {
-        "stack": ["react-native", "ios"],
-        "enabled": false
-      },
-      "test": {
-        "stack": "server",
-        "roles": ["test"]
-      }
+        "server": {
+            "stack": [
+                "server"
+            ],
+            "tsLoaderOptions": {
+                "configFileName": "./servers/frontend-server/tsconfig.json"
+            },
+            "enabled": true
+        },
+        "android": {
+            "stack": [
+                "react-native",
+                "android"
+            ],
+            "enabled": false
+        },
+        "ios": {
+            "stack": [
+                "react-native",
+                "ios"
+            ],
+            "enabled": false
+        },
+        "test": {
+            "stack": "server",
+            "roles": [
+                "test"
+            ]
+        }
     },
     "options": {
         "backendBuildDir": "servers/backend-server/dist",
         "frontendBuildDir": "servers/frontend-server/dist",
         "dllBuildDir": "build/dll",
         "overridesConfig": "tools/webpackAppConfig.js",
-        "stack": ["apollo", "ts", "react", "sass","webpack"],
+        "stack": [
+            "apollo",
+            "ts",
+            "react",
+            "sass",
+            "webpack"
+        ],
         "backendUrl": "http://localhost:8080/graphql",
-        "ssr": false,
+        "ssr": true,
         "webpackDll": true,
         "reactHotLoader": false,
         "persistGraphQL": false,
         "frontendRefreshOnBackendChange": true
-      }
     }
+}
