--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -5,9 +5,10 @@
 	"private": true,
 	"main": "index.js",
 	"scripts": {
-		"prepublish": "npm run build:clean",
+		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
-		"start": "node app.js",
+		"build": "../../node_modules/.bin/spin build",
+		"start": "node dist/index.js",
 		"docker:build": "docker build . -t sample-stack-frontend:0.0.1",
 		"docker:run": "docker run -it sample-stack-frontend:0.0.1",
 		"jest": "./node_modules/.bin/jest",
@@ -28,6 +29,7 @@
 	"devDependencies": {
 		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
+		"spinjs": "^0.4.11",
 		"webpack": "^3.7.1",
 		"webpack-dev-server": "^2.9.1",
 		"webpack-fail-plugin": "^2.0.0",
