--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.0",
     "caporal": "^0.7.0",
     "concurrently": "^3.4.0",
     "connect": "^3.6.5",
@@ -138,7 +138,7 @@
     "npm-check-updates": "^2.12.1",
     "openurl": "^1.1.1",
     "persistgraphql-webpack-plugin": "^0.4.2",
-    "postcss-loader": "^2.0.6",
+    "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
     "qrcode-terminal": "^0.11.0",
     "raw-loader": "^0.5.1",
@@ -159,7 +159,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "^0.4.11",
+    "spinjs": "0.4.11",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.24",
