spin to build multiple servers

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "graphql-code-generator": "^0.8.10",
     "haul": "1.0.0-beta.6",
     "hemera-testsuite": "^1.4.1",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.4",
     "husky": "^0.14.3",
@@ -159,7 +160,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "^0.4.13",
+    "spinjs": "^0.4.15",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.24",
