--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "install": "npm run lerna",
     "clean": "lerna clean",
     "start": "babel-node --presets es2015 tools/webpack.run watch",
-    "spinBuild": "cross-env NODE_ENV=production spin build",
-    "spinWatch": "spin watch",
+    "spin:build": "cross-env NODE_ENV=production spin build",
+    "spin:watch": "spin watch",
+    "spin:watch:debug": "npm run spin:watch -- -v",
     "spinExp": "spin exp",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
