backend url is always provided so removing few things

--- a/servers/frontend-server/.spinrc.json
+++ b/servers/frontend-server/.spinrc.json
@@ -28,7 +28,8 @@
             "ts",
             "react",
             "sass",
-            "webpack"
+            "webpack",
+            "css"
         ],
         "backendUrl": "http://{ip}:8080/graphql",
         "ssr": true,
