--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.0.4",
+  "version": "0.1.0",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -140,6 +140,7 @@
     "npm-check-updates": "^2.12.1",
     "openurl": "^1.1.1",
     "persistgraphql-webpack-plugin": "^0.4.2",
+    "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
     "qrcode-terminal": "^0.11.0",
     "raw-loader": "^0.5.1",
