--- a/packages/sample-graphql-client/package.json
+++ b/packages/sample-graphql-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sample-stack/graphql",
+  "name": "@sample-stack/graphql-gql",
   "version": "0.0.1",
   "description": "Sample core for higher packages to depend on",
   "main": "lib/index.js",
