fixed package dependencies issue

--- a/package.json
+++ b/package.json
@@ -161,7 +161,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "^0.4.15",
+    "spinjs": "0.4.11",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.24",
@@ -221,7 +221,6 @@
     "helmet": "^3.6.0",
     "hemera-joi": "^1.2.2",
     "hemera-plugin": "0.0.12",
-    "hemera-testsuite": "^1.3.0",
     "immutability-helper": "^2.2.2",
     "inversify": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
@@ -248,7 +247,6 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-injectable-reducer": "^1.0.3",
     "redux-injectable-store": "^1.0.0",
-    "redux-loop": "^3.2.0",
     "redux-thunk": "^2.2.0",
     "reflect-metadata": "^0.1.10",
     "reselect": "^3.0.0",
