fix backend scripts

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -46,6 +46,7 @@
 		"@sample-stack/core": "*",
 		"@sample-stack/store": "*",
 		"@sample-stack/graphql-gql": "*",
+		"@sample-stack/utils": "*",
 		"@cdm-logger/server": "^3.0.2",
 		"apollo-logger": "^0.1.0",
 		"reflect-metadata": "^0.1.10",
