--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -6,15 +6,17 @@
 	"private": true,
 	"scripts": {
 		"prepublish": "npm run build:clean",
-		"build": "spin build",
 		"build:clean": "rimraf dist",
+		"build": "cross-env NODE_ENV=production spin build",
+		"start": "node --harmony dist",
+		"start:staging": "cross-env ENV_FILE=../../config/staging/staging.env node --harmony dist",
+		"watch": "spin watch",
+		"watch:staging": "cross-env NODE_ENV=staging ENV_FILE=../../config/staging/staging.env spin watch",
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
 		"docker:build": "docker build . -t sample-stack-backend:0.0.1",
 		"docker:run": "docker run -it sample-stack-backend:0.0.1",
-		"start": "node dist/index.js",
-		"start:watch": "concurrently \"npm run build:watch\" \"node-dev dist/index.js\"",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd ../../ --knexfile ./knexfile.ts",
@@ -77,6 +79,7 @@
 	},
 	"devDependencies": {
 		"@sample-stack/utils": "*",
+		"cross-env": "^5.0.5",
 		"spinjs": "^0.4.15",
 		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
