update spin file

--- a/.spinrc.json
+++ b/.spinrc.json
@@ -52,6 +52,9 @@
             "css"
         ],
         "backendUrl": "http://{ip}:8080/graphql",
+        "defines": {
+            "__GRAPHQL_URL__": "'http://localhost:8080/graphql'"
+        },
         "ssr": false,
         "webpackDll": true,
         "webpackDevPort": 3000,
