--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "spin:build": "cross-env NODE_ENV=production spin build",
     "spin:watch": "spin watch",
     "spin:watch:debug": "npm run spin:watch -- -v",
-    "spinExp": "spin exp",
+    "spin:exp": "spin exp",
     "watch": "lerna exec --no-sort --ignore *server --stream --parallel -- webpack --watch",
     "prodBuild": "cross-env NODE_ENV=production babel-node --presets es2015 tools/webpack.run",
     "build": "npm run build:packages",
     "build:packages": "lerna run build --ignore *server",
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "prebootstrap": "npm install",
+    "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.ts",
+		"db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
+		"db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
     "test": "jest",
     "posttest": "npm run lint",
     "coverage": "jest --coverage",
