--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -19,9 +19,9 @@
 		"docker:run": "docker run -it sample-stack-backend:0.0.1",
 		"preupver": "npm test",
 		"upver": "standard-version",
-		"db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd ../../ --knexfile ./knexfile.ts",
-		"db:migrate:rollback": "../../node_modules/.bin/knex migrate:rollback  --cwd ../../ --knexfile ./knexfile.ts",
-		"db:seed": "npm run db:migrate && ../../node_modules/.bin/knex seed:run  --cwd ../../ --knexfile ./knexfile.ts"
+		"db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd . --knexfile ./knexfile.ts",
+		"db:migrate:rollback": "../../node_modules/.bin/knex migrate:rollback  --cwd . --knexfile ./knexfile.ts",
+		"db:seed": "npm run db:migrate && ../../node_modules/.bin/knex seed:run  --cwd . --knexfile ./knexfile.ts"
 	},
 	"keywords": [
 		"apollo",
