--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "build:packages:watch": "lerna run build:lib:watch --ignore *server --stream",
     "prebootstrap": "npm install",
     "db:migrate": "knex migrate:latest --cwd . --knexfile ./servers/backend-server/knexfile.ts",
-		"db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
-		"db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
+    "db:migrate:rollback": "knex migrate:rollback  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
+    "db:seed": "npm run db:migrate && knex seed:run  --cwd . --knexfile ./servers/backend-server/knexfile.ts",
     "test": "jest",
     "posttest": "npm run lint",
     "coverage": "jest --coverage",
@@ -75,7 +75,7 @@
     "@types/nats-hemera": "^1.0.0",
     "@types/node": "^8.0.0",
     "@types/prop-types": "^15.5.1",
-    "@types/react": "^16.0.5",
+    "@types/react": "^15.6.0",
     "@types/react-addons-test-utils": "^0.14.18",
     "@types/react-dom": "^15.5.0",
     "@types/react-helmet": "^5.0.3",
@@ -85,7 +85,8 @@
     "@types/sinon": "^2.2.1",
     "@types/webpack": "^3.0.10",
     "@types/webpack-env": "^1.13.0",
-    "apollo-codegen": "^0.16.5",
+    "@types/zen-observable": "^0.5.3",
+    "apollo-codegen": "^0.17.0",
     "apollo-test-utils": "^0.3.2",
     "awesome-typescript-loader": "^3.2.3",
     "babel-cli": "^6.26.0",
@@ -136,13 +137,14 @@
     "mocha": "^4.0.1",
     "mocha-steps": "^1.1.0",
     "mocha-webpack": "^0.7.0",
+    "module": "^1.2.5",
     "nock": "^9.0.11",
     "node-dev": "^3.1.3",
     "node-sass": "^4.5.3",
     "nodemon": "^1.12.1",
     "npm-check-updates": "^2.12.1",
     "openurl": "^1.1.1",
-    "persistgraphql-webpack-plugin": "^0.4.2",
+    "persistgraphql-webpack-plugin": "^0.4.4",
     "postcss-loader": "^2.0.8",
     "prettier": "^1.7.4",
     "qrcode-terminal": "^0.11.0",
@@ -194,7 +196,7 @@
   "dependencies": {
     "@cdm-logger/client": "^3.1.1",
     "@cdm-logger/server": "^3.0.2",
-    "apollo-client": "^1.9.2",
+    "apollo-client": "^1.9.3",
     "apollo-link": "^0.7.0",
     "apollo-logger": "^0.1.0",
     "body-parser": "^1.18.2",
@@ -204,23 +206,24 @@
     "cors": "^2.8.3",
     "export-dir": "^0.1.2",
     "express": "^4.16.2",
-    "fela": "^5.2.0",
-    "fela-beautifier": "^5.0.7",
-    "fela-font-renderer": "^5.0.8",
-    "fela-perf": "^5.0.2",
-    "fela-plugin-fallback-value": "^5.0.8",
-    "fela-plugin-logger": "^5.0.3",
-    "fela-plugin-lvha": "^5.0.7",
-    "fela-plugin-prefixer": "^5.0.8",
-    "fela-plugin-unit": "^5.0.7",
-    "fela-plugin-validator": "^5.0.7",
+    "fela": "^6.0.3",
+    "fela-beautifier": "^5.0.11",
+    "fela-dom": "^6.0.3",
+    "fela-font-renderer": "^5.0.10",
+    "fela-perf": "^5.0.3",
+    "fela-plugin-fallback-value": "^5.0.12",
+    "fela-plugin-logger": "^5.0.4",
+    "fela-plugin-lvha": "^5.0.11",
+    "fela-plugin-prefixer": "^5.0.12",
+    "fela-plugin-unit": "^5.0.11",
+    "fela-plugin-validator": "^5.0.11",
     "graphql": "^0.10.5",
     "graphql-nats-subscriptions": "^1.0.8",
     "graphql-server-core": "^1.1.0",
     "graphql-server-express": "^1.1.2",
     "graphql-subscriptions": "^0.5.0",
     "graphql-tag": "^2.4.2",
-    "graphql-tools": "1.2.2",
+    "graphql-tools": "2.5.1",
     "helmet": "^3.6.0",
     "hemera-joi": "^1.2.2",
     "hemera-plugin": "0.0.12",
@@ -235,17 +238,17 @@
     "node-pre-gyp": "~0.6.31",
     "persistgraphql": "^0.3.10",
     "prop-types": "^15.5.8",
-    "react": "^15.5.4",
+    "react": "^15.6.0",
     "react-apollo": "^1.4.15",
-    "react-dom": "^15.5.4",
-    "react-fela": "^5.3.0",
+    "react-dom": "^15.6.0",
+    "react-fela": "^6.0.3",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.6.2",
-    "recompose": "^0.25.0",
+    "recompose": "^0.26.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-injectable-reducer": "^1.0.3",
@@ -258,6 +261,7 @@
     "serialize-javascript": "^1.4.0",
     "sqlite3": "^3.1.8",
     "styled-components": "^2.0.0",
-    "subscriptions-transport-ws": "^0.8.3"
+    "subscriptions-transport-ws": "^0.8.3",
+    "ws": "^3.2.0"
   }
 }
