--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -38,13 +38,63 @@
 		"webpack": "^3.7.1"
 	},
 	"dependencies": {
+		"@cdm-logger/client": "^3.1.1",
+		"@cdm-logger/server": "^3.0.2",
 		"@sample-stack/core": "*",
 		"@sample-stack/client-core": "*",
 		"@sample-stack/client-react": "*",
 		"@sample-stack/client-redux": "*",
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
-		"express": "^4.16.2"
+		"apollo-client": "^1.9.2",
+		"apollo-link": "^0.7.0",
+		"apollo-logger": "^0.1.0",
+		"browser-bunyan": "^0.4.0",
+		"bunyan": "^1.8.12",
+		"dotenv": "^4.0.0",
+		"fela": "^6.0.3",
+		"fela-beautifier": "^5.0.11",
+		"fela-dom": "^6.0.3",
+		"fela-font-renderer": "^5.0.10",
+		"fela-perf": "^5.0.3",
+		"fela-plugin-fallback-value": "^5.0.12",
+		"fela-plugin-logger": "^5.0.4",
+		"fela-plugin-lvha": "^5.0.11",
+		"fela-plugin-prefixer": "^5.0.12",
+		"fela-plugin-unit": "^5.0.11",
+		"fela-plugin-validator": "^5.0.11",
+		"ramda": "^0.25.0",
+		"js-cookie": "^2.1.4",
+		"react": "^15.6.0",
+		"react-apollo": "^1.4.15",
+		"react-dom": "^15.6.0",
+		"react-fela": "^6.0.3",
+		"react-helmet": "^5.2.0",
+		"react-redux": "^5.0.5",
+		"react-resizable": "^1.7.4",
+		"react-resizable-box": "^2.1.0",
+		"react-router-dom": "^4.1.1",
+		"react-router-redux": "^4.0.8",
+		"react-transition-group": "^2.2.1",
+		"reactstrap": "^4.6.2",
+		"recompose": "^0.26.0",
+		"redux": "^3.6.0",
+		"redux-devtools-extension": "^2.13.2",
+		"redux-injectable-reducer": "^1.0.3",
+		"redux-injectable-store": "^1.0.0",
+		"redux-loop": "^4.2.1",
+		"redux-persist": ">=4.8.3",
+		"redux-thunk": "^2.2.0",
+		"reselect": "^3.0.0",
+		"serialize-javascript": "^1.4.0",
+		"graphql": "^0.10.5",
+		"lodash": "^4.17.4",
+		"subscriptions-transport-ws": "^0.8.3",
+		"isomorphic-fetch": "^2.2.1",
+		"express": "^4.16.2",
+		"classnames": "^2.2.5",
+		"cors": "^2.8.3",
+		"body-parser": "^1.18.2"
 	},
 	"peerDependencies": {
 		"source-map-loader": "*",
