updated docker settings

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -15,8 +15,8 @@
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
-		"docker:build": "docker build . -t sample-stack-backend:0.0.1",
-		"docker:run": "docker run -it sample-stack-backend:0.0.1",
+		"docker:build": "npm run build && docker build . -t sample-stack-backend:0.0.4",
+		"docker:run": "docker run -it sample-stack-backend:0.0.4",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd . --knexfile ./knexfile.ts",
