--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -5,8 +5,8 @@
 	"private": true,
 	"main": "index.js",
 	"scripts": {
-		"docker:build": "docker build . -t sample-stack-frontend:0.0.1",
-		"docker:run": "docker run -it sample-stack-frontend:0.0.1",
+		"docker:build": "npm run build && docker build . -t sample-stack-frontend:0.0.4",
+		"docker:run": "docker run -it sample-stack-frontend:0.0.4",
 		"prebuild": "npm run build:clean",
 		"build:clean": "rimraf dist",
 		"build": "cross-env NODE_ENV=production spin build",
@@ -76,6 +76,7 @@
 		"react-router-dom": "^4.1.1",
 		"react-router-redux": "^4.0.8",
 		"react-transition-group": "^2.2.1",
+		"react-redux-typescript": "^2.3.0",
 		"reactstrap": "^4.6.2",
 		"recompose": "^0.26.0",
 		"redux": "^3.6.0",
