added missing packages

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -51,7 +51,7 @@
 		"@sample-stack/graphql-gql": "*",
 		"@sample-stack/utils": "*",
 		"@cdm-logger/server": "^3.0.2",
-		"dotenv": "^4.0.0",		
+		"dotenv": "^4.0.0",
 		"apollo-logger": "^0.1.0",
 		"reflect-metadata": "^0.1.10",
 		"lodash": "^4.17.4",
@@ -59,8 +59,14 @@
 		"subscriptions-transport-ws": "^0.8.3",
 		"isomorphic-fetch": "^2.2.1",
 		"inversify": "^4.1.0",
+		"morgan": "^1.8.1",
+		"nats": "^0.7.20",
+		"persistgraphql": "^0.3.10",
+		"nats-hemera": "^1.5.13",
 		"graphql": "^0.10.5",
 		"graphql-subscriptions": "^0.5.0",
+		"graphql-nats-subscriptions": "^1.0.8",
+		"ws": "^3.2.0",
 		"graphql-server-express": "^1.1.2",
 		"express": "^4.16.2",
 		"cors": "^2.8.3",
