--- a/packages/sample-client-redux/package.json
+++ b/packages/sample-client-redux/package.json
@@ -50,6 +50,7 @@
     "webpack": "^3.7.1"   
   },
   "dependencies": {
+    "@sample-stack/core": "*",
     "@sample-stack/client-core": "*"
   },
   "peerDependencies": {
