--- a/.spinrc.json
+++ b/.spinrc.json
@@ -56,6 +56,7 @@
             "__GRAPHQL_URL__": "'http://localhost:8080/graphql'"
         },
         "ssr": false,
+        "useDefaultPostCss": true,
         "webpackDll": true,
         "webpackDevPort": 3000,
         "reactHotLoader": false,
