--- a/packages/sample-client-react/package.json
+++ b/packages/sample-client-react/package.json
@@ -45,6 +45,7 @@
   },
   "homepage": "https://github.com/cdmbase/fullstack-pro#readme",
   "peerDependencies": {
+    "@sample-stack/core": "*",
     "@sample-stack/client-core": "*",
     "@sample-stack/client-redux": "*",
     "@sample-stack/graphql-gql": "*",
@@ -56,6 +57,7 @@
     "react-router": "^3.0.0"
   },
   "dependencies": {
+    "@sample-stack/core": "*",
     "@sample-stack/client-core": "*",
     "@sample-stack/client-redux": "*",
     "@sample-stack/graphql-gql": "*"
