updated package config

--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "apollo-server",
-	"version": "0.0.1",
+	"name": "sample-stack-backend",
+	"version": "0.0.4",
 	"description": "Starter kit for apollo server using webpack and typescript",
-	"main": "dist/main.js",
+	"main": "dist/index.js",
 	"private": true,
 	"scripts": {
 		"prepublish": "npm run build:clean",
@@ -15,8 +15,8 @@
 		"test": "jest",
 		"test:watch": "npm test -- --watch",
 		"test:notify": "npm run test:watch -- --notify",
-		"docker:build": "npm run build && docker build . -t sample-stack-backend:0.0.4",
-		"docker:run": "docker run -it sample-stack-backend:0.0.4",
+		"docker:build": "npm run build && docker build . -t $npm_package_name:$npm_package_version",
+		"docker:run": "docker run -it $npm_package_name:$npm_package_version",
 		"preupver": "npm test",
 		"upver": "standard-version",
 		"db:migrate": "../../node_modules/.bin/knex migrate:latest --cwd . --knexfile ./knexfile.ts",
@@ -65,6 +65,7 @@
 		"nats-hemera": "^1.5.13",
 		"graphql": "^0.10.5",
 		"graphql-subscriptions": "^0.5.0",
+		"graphql-tools": "2.5.1",
 		"graphql-nats-subscriptions": "^1.0.8",
 		"ws": "^3.2.0",
 		"graphql-server-express": "^1.1.2",
