update package names

--- a/servers/frontend-server/package.json
+++ b/servers/frontend-server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sample-frontend-server",
+	"name": "sample-stack-frontend",
 	"version": "0.0.5",
 	"description": "Sample Client server",
 	"private": true,
