--- a/servers/hemera-server/package.json
+++ b/servers/hemera-server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hemera-server",
+    "name": "sample-stack-hemera-server",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
