--- a/servers/backend-server/.spinrc.json
+++ b/servers/backend-server/.spinrc.json
@@ -27,7 +27,7 @@
             "webpack",
             "css"
         ],
-        "backendUrl": "http://{ip}:8080/graphql",
+        "backendUrl": "http://{ip}:8080",
         "defines": {
             "__GRAPHQL_URL__": "'http://localhost:8080/graphql'"
         },
