--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sample-stack-backend",
+	"name": "sample-stack-backend-server",
 	"version": "0.0.10",
 	"description": "Starter kit for apollo server using webpack and typescript",
 	"main": "dist/index.js",
