--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.1.8",
+  "version": "0.1.9",
   "scripts": {
     "jest": "./node_modules/.bin/jest",
     "compile": "lerna exec -- npm run compile",
@@ -165,7 +165,7 @@
     "source-list-map": "^2.0.0",
     "source-map-loader": "^0.2.1",
     "source-map-support": "^0.5.0",
-    "spinjs": "^0.4.26",
+    "spinjs": "0.4.18",
     "standard-version": "^4.0.0",
     "style-loader": "^0.18.2",
     "tcomb": "^3.2.24",
