--- a/servers/backend-server/package.json
+++ b/servers/backend-server/package.json
@@ -87,7 +87,7 @@
 	},
 	"devDependencies": {
 		"cross-env": "^5.0.5",
-		"spinjs": "^0.4.26",
+		"spinjs": "0.4.18",
 		"jest": "^21.1.0",
 		"rimraf": "^2.6.1",
 		"webpack": "^3.7.1"
